--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 <a class="twitter" href=""><i class="fa fa-twitter"></i></a>
 <a class="facebook" href="https://www.facebook.com/byron.ortiz.3785?mibextid=ZbWKwL"><i class="fa fa-facebook"></i></a>
 <a class="youtube" href="https://www.youtube.com/channel/UCDbKQbAUGIr9VA0RShuzgsA"><i class="fa fa-youtube-play"></i></a>
-<a class="github" href=""><i class="fa fa-github"></i></a> 
+<a class="github" href="https://github.com/Andres221218/portafolio.git"><i class="fa fa-github"></i></a> 
 <a class="instagram" href="https://www.instagram.com/nandress22?igsh=cjZyZjhxZ3k3NzVu"><i class="fa fa-instagram"></i></a>
 
 </div>
